# Parsing-Points

./: .gitignore  README.md  crowTest.cpp  docker-compose.yml
.github/workflows/: build-and-test.yml
Client/ParsingPointsClient/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  proxy.conf.json
Client/ParsingPointsClient/src/: custom-theme.scss  index.html  styles.css
Client/ParsingPointsClient/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts
Client/ParsingPointsClient/src/app/components/footer/: footer.component.html
Client/ParsingPointsClient/src/app/components/header/: header.component.css  header.component.html  header.component.ts
Client/ParsingPointsClient/src/app/components/main-page/: main-page.component.css  main-page.component.html  main-page.component.ts
Client/ParsingPointsClient/src/app/components/odds-list/: odds-list.component.css  odds-list.component.html  odds-list.component.ts
Client/ParsingPointsClient/src/app/components/page-not-found/: page-not-found.component.css  page-not-found.component.html
Client/ParsingPointsClient/src/app/components/scoreboard/: scoreboard.component.css  scoreboard.component.html  scoreboard.component.ts
Client/ParsingPointsClient/src/app/components/scores-list/: scores-list.component.css  scores-list.component.html  scores-list.component.ts
Client/ParsingPointsClient/src/app/components/sports-carousel/: sports-carousel.component.css  sports-carousel.component.html  sports-carousel.component.spec.ts  sports-carousel.component.ts
Client/ParsingPointsClient/src/app/components/sports-list/: sports-list.component.css  sports-list.component.html  sports-list.component.ts
Client/ParsingPointsClient/src/app/interfaces/: odds.ts  scores.ts  sports.ts
Client/ParsingPointsClient/src/assets/: odds.json
Client/ParsingPointsClient/src/environments/: environment-definition.ts  environment.development.ts  environment.prod.ts  environment.ts
Database/: league  league.cpp
Response Examples/: odds.json  scores.json  sports.json
Routes/: api  apiRoutes.cpp
Server/: API  CMakeLists.txt  Dockerfile  bets.txt  crow  docker-compose.yml  main.cpp
Server/data/: curl_request.cpp  curl_request.hpp  env_file_handler.cpp  env_file_handler.hpp  option  option_url.cpp  option_url.hpp  sql_queries.cpp  sql_queries.hpp
Server/dockerfiles/: Dockerfile.api  Dockerfile.test
Server/logic/: get_bet.cpp  get_bet.hpp  get_function.hpp  get_functions.cpp
Server/tests/: CMakeLists.txt  server_mock_test.cpp
